<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slid"
    tools:context=".Main3Activity">

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="199dp"
        android:layout_height="35dp"
        android:layout_marginStart="357dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="328dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="199dp"
        android:layout_height="35dp"
        android:layout_marginStart="357dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="277dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/sub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sub" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="199dp"
        android:layout_height="35dp"
        android:layout_marginStart="357dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="227dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/c" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="199dp"
        android:layout_height="35dp"
        android:layout_marginStart="357dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="178dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/gk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/g" />

</androidx.constraintlayout.widget.ConstraintLayout>