<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add2"
    tools:context=".Main4Activity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginStart="428dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="189dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto_slab_bold"
        android:foregroundTint="#000000"
        android:text="@string/drop_your_nanswer_here"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="52dp"
        android:layout_height="67dp"
        android:layout_marginStart="339dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nine"
        android:contentDescription="@string/nine_activity4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="278dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="152dp"
        android:background="#41000000"
        android:text="@string/choose_answers_from_here"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>