<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/count"
    tools:context=".gk">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginStart="446dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="75dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto_slab_bold"
        android:foregroundTint="#000000"
        android:text="@string/drop_your_nanswer_here"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginStart="446dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="264dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto_slab_bold"
        android:foregroundTint="#000000"
        android:text="@string/drop_your_nanswer_here"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginStart="446dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="178dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto_slab_bold"
        android:foregroundTint="#000000"
        android:text="@string/drop_your_nanswer_here"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifview1"
        android:layout_width="1920dp"
        android:layout_height="1080dp"
        android:layout_marginStart="366dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="365dp"
        android:layout_marginBottom="205dp"
        android:src="@drawable/confetti"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifview2"
        android:layout_width="350dp"
        android:layout_height="252dp"
        android:layout_marginStart="365dp"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="366dp"
        android:layout_marginBottom="114dp"
        android:background="#00000000"
        android:src="@drawable/good"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifview3"
        android:layout_width="500dp"
        android:layout_height="474dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="580dp"
        android:layout_marginBottom="288dp"
        android:src="@drawable/fireworks"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifview4"
        android:layout_width="500dp"
        android:layout_height="474dp"
        android:layout_marginStart="537dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="288dp"
        android:src="@drawable/fireworks"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="605dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="163dp"
        android:contentDescription="@string/seven_counting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/seven" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="67dp"
        android:layout_height="65dp"
        android:layout_marginStart="605dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="260dp"
        android:contentDescription="@string/five_counting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/five" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="69dp"
        android:layout_height="65dp"
        android:layout_marginStart="605dp"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/t"
        android:contentDescription="@string/threeissue" />

</androidx.constraintlayout.widget.ConstraintLayout>